# vr_audience_fire

./: .gitignore  Makefile  README.md  build.cmd  main.py  pyproject.toml
.github/workflows/: release.yml  uv_setuppy.yml
src/: _old_.py  app.vrmanifest  config.json  config_reader.py  main.py  setup.py  utils.py
src/tinyoscquery/: query.py  queryservice.py
src/tinyoscquery/shared/: node.py
src/vrchat_oscquery/: asyncio.py  common.py
unity_prefab/: Fire.mat  README.md  package.json  vr_audience_fire.prefab  vr_audience_fire.unitypackage  water.mat
